tests/ui/resolve/open-ns-9.stderr
error[E0659]: `my_api` is ambiguous
  --> $DIR/open-ns-9.rs:5:5
   |
LL | use my_api::utils::get_u32;
   |     ^^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `my_api` could refer to a namespaced crate passed with `--extern`
note: `my_api` could also refer to the module defined here
  --> $DIR/open-ns-9.rs:10:9
   |
LL | /         pub mod my_api {
LL | |             pub mod utils {
LL | |                 pub fn get_u32() -> u32 {
LL | |                     2
...  |
LL | |         }
   | |_________^
...
LL |   define!();
   |   --------- in this macro invocation
   = help: use `crate::my_api` to refer to this module unambiguously
   = note: this error originates in the macro `define` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
